#pragma once

enum class Border {
    NONE = 0,
    NE   = 1,  // Nord-Est
    NW   = 2,  // Nord-Ouest
    SE   = 3,  // Sud-Est
    SW   = 4   // Sud-Ouest
};